--- a/shop.html
+++ b/shop.html
@@ -178,10 +178,19 @@
                                     Iphone 11
                                 </a>
                                 <div class="collapse " style="font-size: 15px; margin-left: 3%;" id="collapseBrand">
-                                    <div>
-                                        <a href="">Iphone 11</a><br>
-                                        <a href="">Iphone 11 pro</a><br>
-                                        <a href="">Iphone 11 pro max</a>
+                                    <div >
+                                       <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="11">
+                            <label class="custom-control-label text-danger" for="11">Iphone 11</label>
+                        </div>
+                                                                               <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="11pro">
+                            <label class="custom-control-label text-danger" for="11pro">Iphone 11 pro</label>
+                        </div>
+                                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="promax">
+                            <label class="custom-control-label text-danger" for="promax">Iphone 11 pro MAX</label>
+                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -192,10 +201,23 @@
                                 </a>
                                 <div class="collapse" style="font-size: 15px; margin-left: 3%;" id="collapseExample1">
                                     <div>
-                                        <a href="">Red</a><br>
-                                        <a href="">Green</a><br>
-                                        <a href="">Yellow</a><br>
-                                        <a href="">black</a>
+
+                                       <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="red">
+                            <label class="custom-control-label text-danger" for="red">RED</label>
+                        </div>
+                                       <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="green">
+                            <label class="custom-control-label text-danger" for="green">GREEN</label>
+                        </div>
+                                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="yellow">
+                            <label class="custom-control-label text-danger" for="yellow">YELLOW</label>
+                        </div>
+                                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="black">
+                            <label class="custom-control-label text-danger" for="black">BLACK</label>
+                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -206,10 +228,22 @@
                                 </a>
                                 <div class="collapse" style="font-size: 15px; margin-left: 3%;" id="collapseExample2">
                                     <div>
-                                        <a href="">32GB</a><br>
-                                        <a href="">64GB</a><br>
-                                        <a href="">128GB</a><br>
-                                        <a href="">256GB</a>
+                                       <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="32">
+                            <label class="custom-control-label text-danger" for="32">32GB</label>
+                        </div>
+                                       <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="64">
+                            <label class="custom-control-label text-danger" for="64">64GB</label>
+                        </div>
+                                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="128">
+                            <label class="custom-control-label text-danger" for="128">128GB</label>
+                        </div>
+                                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="256">
+                            <label class="custom-control-label text-danger" for="256">256GB</label>
+                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -221,10 +255,22 @@
                                 </a>
                                 <div class="collapse" style="font-size: 15px; margin-left: 3%;" id="collapseExample5">
                                     <div>
-                                        <a href="">Midnight Green</a><br>
-                                        <a href="">Space gray</a><br>
-                                        <a href="">Silver</a><br>
-                                        <a href="">Gold</a>
+                                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="mid">
+                            <label class="custom-control-label text-danger" for="mid">Midnight Green</label>
+                        </div>
+                                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="spa">
+                            <label class="custom-control-label text-danger" for="spa">Space Gray</label>
+                        </div>
+                                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="silver">
+                            <label class="custom-control-label text-danger" for="silver">Silver</label>
+                        </div>
+                                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="gold">
+                            <label class="custom-control-label text-danger" for="gold">Gold</label>
+                        </div>
                                     </div>
                                 </div>
                             </div>
